package it.polimi.ingsw.model;


public enum DrawChoice {
        DECK_GOLD,
        DECK_RESOURCE,
        RESOURCE_CARD_1,
        RESOURCE_CARD_2,
        GOLD_CARD_1,
        GOLD_CARD_2,
}

